--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 *.class
+project/*
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/*
+/.idea/
 *.iws
 *.iml
 *.ipr
