--- a/.releaserc
+++ b/.releaserc
@@ -59,7 +59,7 @@
     [
       "@semantic-release/exec",
       {
-        "publishCmd": "sbt assembly"
+        "publishCmd": "sbt coverageOff assembly"
       }
     ],
     [
