--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -7,12 +7,12 @@ name: Scala CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ '**' ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   build:
