--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,13 @@ target/
 !**/src/test/**/target/
 *.class
 project/*
+minesweeper.iml
+.metals
+.bloop
+
 minesweeper.iml.metals
 .vscode
 .metals
-=======
 
 ### IntelliJ IDEA ###
 .idea/*
