--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ src/main/scala/de/htwg/.metals
 src/main/scala/de/htwg/.scala-build/.bloop
 
 *.txt
+*.xml
+.json
 
 ### Environment Variables
 .env
